--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"/>
+        android:background="?attr/colorPrimary" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,14 +25,14 @@
             android:background="@null"
             android:drawableLeft="@drawable/user_name"
             android:drawablePadding="10dp"
-            android:hint="用户名"
+            android:hint="手机号"
             android:singleLine="true"
-            android:textSize="14dp"/>
+            android:textSize="14dp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/divider"/>
+            android:background="@color/divider" />
 
         <com.stx.core.widget.HidePwEditText
             android:id="@+id/ed_pwd"
@@ -44,39 +44,41 @@
             android:hint="密码（密码长度不能少于8位）"
             android:inputType="textPassword"
             android:singleLine="true"
-            android:textSize="14dp"/>
+            android:textSize="14dp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/divider"/>
+            android:background="@color/divider" />
+    </LinearLayout>
 
-        <com.stx.core.widget.HidePwEditText
-            android:id="@+id/ed_sure_pwd"
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        android:paddingLeft="10dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/ed_code"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:background="@null"
-            android:drawableLeft="@drawable/user_password"
-            android:drawablePadding="10dp"
-            android:hint="确认密码（密码长度不能少于8位）"
-            android:inputType="textPassword"
-            android:textSize="14dp"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/divider"/>
-
-        <com.stx.core.widget.HidePwEditText
-            android:id="@+id/ed_sure_email"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_weight="1"
             android:background="@null"
             android:drawableLeft="@drawable/user_email"
             android:drawablePadding="6dp"
-            android:hint="邮箱"
+            android:hint="验证码"
             android:singleLine="true"
-            android:textSize="14dp"/>
+            android:textSize="14dp" />
+
+        <com.stx.core.widget.GetCodeButton
+            android:id="@+id/tv_get_code"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/selector_btn_getcode"
+            android:gravity="center"
+            android:text="获取验证码"
+            android:textColor="@color/colorWhite" />
 
     </LinearLayout>
 
@@ -90,6 +92,6 @@
         android:gravity="center"
         android:text="立即注册"
         android:textColor="@color/color_008cf0"
-        android:textSize="15dp"/>
+        android:textSize="15dp" />
 
 </LinearLayout>
