--- a/app/src/main/res/layout/layout_news_comment_label.xml
+++ b/app/src/main/res/layout/layout_news_comment_label.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
