--- a/app/src/main/res/layout/view_load_more.xml
+++ b/app/src/main/res/layout/view_load_more.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_4"
-            android:text="@string/loading"
+            android:text="@string/string_loading"
             android:textSize="@dimen/sp_14"/>
     </LinearLayout>
 
